<resources>
    <string name="app_name">NikeStore</string>
    <string name="home">خانه</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">اطلاعات کاربری</string>
    <string name="latest">جدیدترین</string>
    <string name="popular">پربازدید ترین</string>
    <string name="viewAll">مشاهده همه</string>
    <string name="comments">نظرات کاربران</string>
    <string name="Moarefi">معرفی اجمالی</string>
    <string name="insertComment">ثبت نظر</string>
    <string name="viewAllComments">مشاهده همه نظرات</string>
    <string name="addShopList">    افزودن به سبد خرید    </string>
    <string name="productList">لیست محصولات</string>
    <string name="sort">مرتب سازی</string>
    <string name="sortLasted">جدیدترین</string>
    <string name="sortPopular">پربازدید ترین</string>
    <string name="sortPriceHighToLow">گران ترین</string>
    <string name="sortPriceLowToHigh">ارزان ترین</string>
    <string name="unknown_error">خطای نامشخص</string>
    <string name="success_AddToCart">به سبد خریداضافه شد</string>
    <string name="pay">پرداخت</string>
    <string name="count">تعداد</string>
    <string name="removeFromCartList">حذف از سبد خرید</string>
    <string name="purchaseDetail">جزییات خرید</string>
    <string name="totalPrice">مبلغ کل خرید</string>
    <string name="shipingCost">هزینه ارسال</string>
    <string name="payablePrice">مبلغ قابل پرداخت</string>

    <string-array name="sort">
        <item>@string/sortLasted</item>
        <item>@string/sortPopular</item>
        <item>@string/sortPriceHighToLow</item>
        <item>@string/sortPriceLowToHigh</item>
    </string-array>


    <string name="loginScreenTitle">ورود به حساب کاربری</string>
    <string name="loginTitle">ورود</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="repeat_password">تکرار رمز عبور</string>
    <string name="signUpHint">حساب کاربری ندارید؟</string>
    <string name="signUp">ثبت نام</string>
    <string name="authHint">ایمیل و رمز عبور خود را وارد کنید</string>

    <string name="signUpScreenTitle">ایجاد حساب کاربری</string>
    <string name="loginHint">قبلا ثبت نام کردید؟</string>

    <string name="cartEmptyStateLogin">وارد حساب کاربری خود شوید</string>
    <string name="cartEmptyStateCallToAction">ورود به حساب کاربری</string>
    <string name="cartEmptyState">هیچ خبری اینجا نیست!</string>

    <string name="shippingToolbarTitle">انتخاب تحویل گیرنده و شیوه پرداخت</string>
    <string name="onlinePayment">پرداخت اینترنتی</string>
    <string name="cashOnDelivery">پرداخت در محل</string>
    <string name="checkOutToolbarTitle">رسید پرداخت</string>
    <string name="returnHome">بازگشت به صفحه اصلی</string>
    <string name="orderHistory">سوابق سفارش</string>
    <string name="purchaseStatus">وضعیت سفارش</string>
    <string name="price">مبلغ</string>

    <string name="firstName">نام</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="postalCode">کد پستی</string>
    <string name="phoneNumber">شماره تلفن</string>
    <string name="adress">آدرس تحویل گیرنده</string>

    <string name="favorites">لیست علاقه مندی ها</string>
    <string name="signIn">ورود به حساب کاربری</string>
    <string name="signOut">خروج از حساب کاربری</string>
    <string name="guest_user">کاربر مهمان</string>
    <string name="favorites_empty_state_message">هنوز محصولی به لیست علاقه مندی اضافه نکردی</string>
    <string name="favorites_help_message">برای حذف محصول انگشت خود را روی آن نگه دارید</string>
    <string name="orderHistory_orderId">شناسه سفارش</string>
    <string name="orderHistory_payable">مبلغ</string>

</resources>