<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_gravity="center_vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="60dp"
        app:srcCompat ="@drawable/ic_nike_logo"
        app:tint="@color/white"

        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/signUpScreenTitle"
            android:textAppearance="?textAppearanceHeadline5" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authHint"
        android:alpha="0.8"
        android:layout_marginTop="8dp"
        android:textAppearance="?textAppearanceBody1"/>

    <EditText
        android:id="@+id/emailEtSignUp"
        android:layout_width="@dimen/authViewWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        style="@style/Theme.Nike.AuthTheme.EditText"/>

    <EditText
        android:id="@+id/passwordEtSignUp"
        android:layout_width="@dimen/authViewWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="right|center_vertical"
        style="@style/Theme.Nike.AuthTheme.EditText"/>

        <EditText
            android:id="@+id/editText"
            style="@style/Theme.Nike.AuthTheme.EditText"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="right|center_vertical"
            android:inputType="textPassword"
            android:hint="@string/repeat_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpBtn"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/signUp"
            android:textAppearance="?textAppearanceBody1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:text="@string/loginHint"
            android:textAppearance="?textAppearanceBody1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUp_to_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/primary_bold"
            android:text="@string/loginScreenTitle" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>