<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.shipping.ShippingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.sevenlearn.nike.view.NikeToolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:nt_title="@string/shippingToolbarTitle"/>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:paddingBottom="32dp"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameEtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEt"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/firstName"
                    android:text="سعید"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameEtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEt"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/lastName"
                    android:text="شاملو"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/postalEtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postalEt"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/postalCode"
                    android:maxLength="10"
                    android:text="3351167566"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberEtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberEt"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/phoneNumber"
                    android:maxLength="11"
                    android:text="09109882889"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adressEtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adressEt"
                    style="@style/ShippingTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/adress"
                    android:text="شهریار خیابان دلاوری پلاک 53"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <include layout="@layout/item_purchase_detail"
                android:id="@+id/purchaseDetailView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/codBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cashOnDelivery"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_marginEnd="8dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onlinePaymentBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onlinePayment"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>